# CodekraftEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CodekraftEngine.sln  README.md  deploy  run  start
build-tool/: CMakeLists.txt  build-and-install.sh  build-tool.ckproj  ckbuild.csproj  ckbuild.sln  install.sh
build-tool/src/: BuildSelection.cs  CKObject.cs  CKObject.hpp  CodeGenerator.cpp  CodeGenerator.cs  FileSelector.cpp  HeaderParser.cs  Main.cs  Parser.cpp  ProgramSettings.cs  ProjectSettings.cs  SourceFile.cs  Template.cpp.in  Utils.cs  main.cpp
build-tool/src/Generators/: Generator.cs  NinjaGenerator.cs
build-tool/templates/: template.ckproj  template.ckproj.old
build-tool/working/ckb/: Lookup.generated.hpp
build-tool/working/cmake/: .ninja_deps  .ninja_log  build.ninja  ckbuild  rules.ninja
editor/: CMakeLists.txt
editor/include/: EditorApp.hpp  EditorConfig.hpp.in  EditorFrame.hpp
editor/src/: EditorApp.cpp  EditorFrame.cpp  main.cpp
engine/: CMakeLists.txt  DisplayOpenGL.hpp  engine.ckproj  install.sh  test.cpp
engine/include/: Actor.hpp  Asset.hpp  AssetFactory.hpp  AssetManager.hpp  AssetManagerOLD.hpp  AssetStructures.hpp  Assets.hpp  BillboardActor.hpp  Camera.hpp  DefaultShaderCode.hpp  DeferredShaderCode.hpp  Display.hpp  DisplayOpenGL.hpp  Editor.hpp  Engine.hpp  EngineApp.hpp  EngineConfig.hpp.in  GLMSavers.hpp  GameApp.hpp  GameObject.hpp  GenericAsset.hpp  Level.hpp  LightActor.hpp  Material.hpp  Mesh.hpp  Model.hpp  RAsset.hpp  ResourceManager.hpp  SceneComponent.hpp  Serialization.hpp  Shader.hpp  StaticMesh.hpp  StaticMeshActor.hpp  StaticMeshComponent.hpp  Texture.hpp  Transform.hpp  WorldManager.hpp  base64.hpp  colormod.h
engine/include/TP/: CMakeLists.txt  OBJ_Loader.h
engine/include/TP/IMGUI/: imgui_impl_glfw_gl3.cpp  main.cpp
engine/include/TP/cereal/: cereal.hpp
engine/include/TP/cereal/archives/: json.hpp
engine/include/TP/cereal/details/: helpers.hpp  traits.hpp
engine/include/TP/cereal/types/: array.hpp  base_class.hpp  boost_variant.hpp  forward_list.hpp  queue.hpp  string.hpp  tuple.hpp  unordered_map.hpp  utility.hpp  vector.hpp
engine/include/TP/cereal/types/concepts/: pair_associative_container.hpp
engine/src/: AssetFactory.cpp  AssetManager.cpp  AssetManagerOLD.cpp  BillboardActor.cpp  Camera.cpp  Display.cpp  DisplayOpenGL.cpp  Editor.cpp  Engine.cpp  Engine.hpp  EngineApp.cpp  GLM.hpp  Level.cpp  Logging.cpp  Logging.hpp  Material.cpp  Mesh.cpp  Model.cpp  ResourceManager.cpp  Shader.cpp  StaticMesh.cpp  StaticMeshActor.cpp  StaticMeshComponent.cpp  Texture.cpp  WorldManager.cpp  base64.cpp  stb_impl.cpp
engine/src/Assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  AssetManagerOLD.cpp  AssetManagerOLD.hpp  AssetR.hpp  GenericAsset.hpp  Serialization.cpp  Serialization.hpp  TestAsset.cpp  TestAsset.hpp
engine/src/Billboard/: BillboardActor.cpp  BillboardActor.hpp
engine/src/Camera/: ACamera.hpp  Camera.cpp  Camera.hpp  CameraUtils.cpp  CameraUtils.hpp
engine/src/Core/: Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  EngineApp.cpp  EngineApp.hpp  GameApp.hpp
engine/src/ECS/: Actor.cpp  Actor.hpp  ActorComponent.hpp  Level.cpp  Level.hpp  SceneComponent.hpp  Transform.hpp  WorldManager.cpp  WorldManager.hpp
engine/src/Editor/: Editor.cpp  Editor.hpp
engine/src/Frontend/: CurrentFrontend.cpp  CurrentFrontend.hpp  Frontend.hpp  FrontendEditor.cpp  FrontendEditor.hpp  FrontendStandalone.cpp  FrontendStandalone.hpp
engine/src/Lighting/: LightActor.hpp
engine/src/Rendering/: DeferredShaderCode.hpp  Display.hpp  DisplayOpenGL.cpp  DisplayOpenGL.hpp  Material.cpp  Material.hpp  MaterialOLD.cpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  StaticMesh.cpp  StaticMesh.hpp  Texture.cpp  Texture.hpp
engine/src/Rendering/Core/: Renderer.hpp  RenderingManager.cpp  RenderingManager.hpp  SceneInfo.hpp  Window.hpp
engine/src/Rendering/GLFW/: GLFWWindow.cpp  GLFWWindow.hpp
engine/src/Rendering/Material/: Material.cpp  Material.hpp
engine/src/Rendering/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
engine/src/StaticMesh/: StaticMeshActor.cpp  StaticMeshActor.hpp  StaticMeshComponent.cpp  StaticMeshComponent.hpp
engine/working/cmake/: .ninja_deps  .ninja_log  build.ninja  rules.ninja
engine/working/cmake/include/: EngineConfig.hpp
ninja/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  rules.ninja
ninja/build-tool/: ckbuild
ninja/testgame/: TestGame
scripts/: build.js  deploy.sh  null.sh  start  test.ckproj
testgame/: CMakeLists.txt  TestGame  imgui.ini  install.sh  run.sh  testgame.ckproj
testgame/src/: main.cpp
testgame/working/: CMakeLists.txt
testgame/working/cmake/: .ninja_deps  .ninja_log  TestGame  build.ninja  rules.ninja
testing/: TestGame  imgui.ini
testing/data/: datmeshes.ckd  datprimary.ckd
testing/raw/Console/: Console.mtl
testing/raw/shaders/: basic_v.glsl  white_f.glsl
